# data_tools

./: CMakeLists.txt  README.md
config/: data_params.yaml  multi_data_params.yaml  multi_pika_teleop_data_params.yaml
include/: dataUtility.h
launch/: run_aloha_data_capture.launch  run_aloha_data_publish.launch  run_aloha_data_sync.launch  run_data_capture.launch  run_data_capture.launch.py  run_data_publish.launch  run_data_publish.launch.py  run_data_sync.launch  run_data_sync.launch.py  run_lift_data_capture.launch  run_lift_data_publish.launch  run_lift_data_sync.launch  run_multi_data_capture.launch  run_multi_data_publish.launch  run_multi_data_sync.launch
scripts/: aloha_camera_point_cloud_filter.py  aloha_data_publish.py  aloha_data_to_hdf5.py  aloha_data_to_mcap.py  camera_point_cloud_filter.py  data_publish.py  data_to_hdf5.py  hdf5_to_lerobot.py  lift_data_publish.py  lift_data_to_hdf5.py  load_data_example.py  mcap_to_aloha_data.py  multi_data_publish.py  multi_data_to_hdf5.py
src/: dataCapture.cpp  dataPublish.cpp  dataSync.cpp  readMcap.cpp
